--- a/2024_APISelfLearningExercises/Exercise1-PadFootings/Exercise1.csproj
+++ b/2024_APISelfLearningExercises/Exercise1-PadFootings/Exercise1.csproj
@@ -10,5 +10,20 @@
     <PackageReference Include="Tekla.Structures.Model" Version="2024.0.2" />
     <PackageReference Include="TSAppConfigPatcherTask" Version="2.1.3" />	
   </ItemGroup>
+	
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+	
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
